[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whitelistchecker"
version = "0.1.0"
description = "Standalone whitelist checker for proxy lists"
authors = [{name="komyaka"}]
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "rich>=13.7.0",
  "pyyaml>=6.0.1",
  "typing-extensions>=4.9.0"
]

[project.scripts]
whitelist-checker = "whitelistchecker.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/whitelistchecker"]
